--- a/draft/master_thesis.bib
+++ b/draft/master_thesis.bib
@@ -131,6 +131,19 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   pages        = {244--254},
 }
 
+@Book{Eckert2018,
+  author      = {Claudia Eckert},
+  publisher   = {De Gruyter Oldenbourg},
+  title       = {IT-Sicherheit},
+  year        = {2018},
+  address     = {Berlin, Boston},
+  isbn        = {9783110563900},
+  doi         = {doi:10.1515/9783110563900},
+  groups      = {Adversary Models},
+  lastchecked = {2022-09-05},
+  url         = {https://doi.org/10.1515/9783110563900},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
