--- a/draft/master_thesis.bib
+++ b/draft/master_thesis.bib
@@ -105,13 +105,6 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   url     = {https://doi.org/10.6028/NIST.SP.800-12r1},
 }
 
-@Misc{WinNT,
-  howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
-  note         = {Accessed: 2010-09-30},
-  title        = {{MS Windows NT} Kernel Description},
-  groups       = {Adversary Models},
-}
-
 @Misc{Mallory2022,
   author       = {Mallory, Knodel and Fred Baker and Olaf, Kolkman and Sofia, Celi and Gurshabad, Grover.},
   howpublished = {\url{https://datatracker.ietf.org/doc/draft-knodel-e2ee-definition/}},
@@ -142,6 +135,35 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   groups      = {Adversary Models},
   lastchecked = {2022-09-05},
   url         = {https://doi.org/10.1515/9783110563900},
+}
+
+@Misc{WebCryptoApi2017,
+  author       = {Watson, Mark},
+  howpublished = {\url{https://www.w3.org/TR/WebCryptoAPI/}},
+  month        = jan,
+  note         = {Accessed: 2022-09-05},
+  title        = {Web Cryptography API},
+  year         = {2017},
+  groups       = {Requirements},
+}
+
+@InProceedings{Halpin2014,
+  author    = {Halpin, Harry},
+  booktitle = {Proceedings of the 23rd International Conference on World Wide Web},
+  title     = {The W3C Web Cryptography API: Motivation and Overview},
+  year      = {2014},
+  address   = {New York, NY, USA},
+  pages     = {959–964},
+  publisher = {Association for Computing Machinery},
+  series    = {WWW '14 Companion},
+  abstract  = {The W3C Web Cryptography API is the standard API for accessing cryptographic primitives in Javascript-based environments. We describe the motivations behind the creation of the W3C Web Cryptography API and give a high-level overview with motivating use-cases while addressing objections.},
+  doi       = {10.1145/2567948.2579224},
+  groups    = {Requirements},
+  isbn      = {9781450327459},
+  keywords  = {javascript, cryptography, web, W3C, API, standards},
+  location  = {Seoul, Korea},
+  numpages  = {6},
+  url       = {https://doi.org/10.1145/2567948.2579224},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
