considering hybride solution

--- a/draft/master_thesis.bib
+++ b/draft/master_thesis.bib
@@ -166,6 +166,16 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   url       = {https://doi.org/10.1145/2567948.2579224},
 }
 
+@Misc{Levenson2018,
+  author       = {Levenson, Hannah},
+  howpublished = {\url{https://dzone.com/articles/the-principle-of-least-effort-an-integral-part-of}},
+  month        = sep,
+  note         = {Accessed: 2022-09-06},
+  title        = {The Principle of Least Effort: An Integral Part of UX},
+  year         = {2018},
+  groups       = {Requirements},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
